[tool.poetry]
name = "leksuss_brain_games"
version = "0.5.0"
description = ""
authors = ["Andrey <leksus@leksus.info>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.13.4"
asciinema = "^2.0.2"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

